--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -10,14 +10,28 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
+      # Checkout the code
       - uses: actions/checkout@v4
+
+      # Install the latest stable version of Flutter
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: 'stable'
+
+      # Install dependencies
       - name: Install dependencies
         run: flutter pub get
+
+      # Analyze the project
       - name: Analyze project source
         run: flutter analyze
+
+      # Run tests
       - name: Run tests
         run: flutter test
+
+      # Uncomment this step if you want to verify code formatting
+      # - name: Verify code formatting
+      #   run: flutter format --set-exit-if-changed .
