--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.19.0
   window_manager: ^0.4.2
   process_run: ^1.2.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
