--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,13 +22,14 @@ dependencies:
   intl: ^0.19.0
   window_manager: ^0.4.2
   process_run: ^1.2.0
-  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
   lint: ^2.0.0
+  flutter_secure_storage: ^7.0.1 # Check the latest version from pub.dev
+  http: ^0.13.3 # Ensure you're using the latest version of the http package
 
 flutter:
   uses-material-design: true
