got rid of all 'problems' with code including various areas that needed const added to variables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,8 @@
       "web/": true,
       "windows/": true,
       "linux/": true,
-      "macos/": true
-      "test/": true
+      "macos/": true,
+      "test/": true,
       "**/.dart_tool": true,
       "**/.idea": true,
       "**/.flutter-plugins": true,
