--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_lints: ^2.0.1
   flutter_secure_storage: ^9.2.2 # Moved to dependencies
   http: ^1.2.2 # Moved to dependencies
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
