--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2 # Moved to dependencies
   http: ^1.2.2 # Moved to dependencies
   flutter_colorpicker: ^1.1.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
